crates/parser/src/snapshots/parser__tests__parse_inline_ok@0043_unit_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "()\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0043_unit_pat.ath
---
UNIT_PAT
  UNIT
    L_PAREN "("
    R_PAREN ")"
  WHITESPACE "\n"

