crates/parser/src/snapshots/parser__tests__parse_inline_ok@0047_some_thing_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(some-var a)\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0047_some_thing_pat.ath
---
SOME_THING_PAT
  L_PAREN "("
  SOME_VAR_KW "some-var"
  WHITESPACE " "
  IDENT_PAT
    NAME
      IDENT "a"
  R_PAREN ")"
  WHITESPACE "\n"

