crates/parser/src/snapshots/parser__tests__parse_inline_ok@0052_list_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "[a b c]\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0052_list_pat.ath
---
LIST_PAT
  L_BRACK "["
  IDENT_PAT
    IDENTIFIER
      IDENT "a"
  WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "b"
  WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "c"
  R_BRACK "]"
  WHITESPACE "\n"

