crates/parser/src/snapshots/parser__tests__parse_inline_ok@0053_list_pat_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "[]\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0053_list_pat_empty.ath
---
LIST_PAT
  L_BRACK "["
  R_BRACK "]"
  WHITESPACE "\n"

